--- a/CSS/BUTTON.html
+++ b/CSS/BUTTON.html
@@ -25,12 +25,11 @@
     width: 100px;
    border-radius: 4px;
    cursor: pointer;
-   transition:background-color 1s; /*change the button color smoothly*/
+   transition:background-color 1s; /*change the button color smoothly*
 
    box-shadow:5px 2px 5px rgb(76, 76, 76); 
    /* create a shadow on button as well as all type of box or divs.5px 2px 5px right   left  bluer */
   
-
 }
 .subscribe-b:hover{
    background-color: green; /*hover are used to the button  color after cursor*/
@@ -81,7 +80,9 @@ cursor: pointer;
     </style>
 </head>
 <body>
-   <button class="subscribe-b">SUBSCRIBE </button>
+   <button class="subscribe-b" onclick="
+    alert('congratulation !!')
+    ">SUBSCRIBE </button>
    
    <button class="like-b">like</button>
    <br>
