--- a/CSS/BUTTON.html
+++ b/CSS/BUTTON.html
@@ -17,7 +17,7 @@
     <title>website</title>
 
     <style>
-.subscribe-b{
+p.subscribe-b{
     background: rgb(200, 0, 0);
     color: azure;
     border: 0cap;
